Added A3Prj to the Repo

--- a/A1Prj/Versions.properties
+++ b/A1Prj/Versions.properties
@@ -1,5 +1,5 @@
 #
-#Tue Oct 22 22:40:17 PDT 2024
+#Fri Nov 15 12:05:08 PST 2024
 CodeNameOneBuildClientJar=205
 CodenameOne_SRCzip=211
 CodenameOneJar=211
