--- a/A2Prj/Versions.properties
+++ b/A2Prj/Versions.properties
@@ -1,5 +1,5 @@
 #
-#Tue Oct 22 22:40:18 PDT 2024
+#Fri Nov 15 12:05:10 PST 2024
 CodeNameOneBuildClientJar=205
 CodenameOne_SRCzip=211
 CodenameOneJar=211
